--- a/src/app/modules/performance/pages/appraisal/appraisal.component.html
+++ b/src/app/modules/performance/pages/appraisal/appraisal.component.html
@@ -8,13 +8,17 @@
         </nb-tab><nb-tab tabTitle="Reviewed" [tabId]="TABS.REVIEWED">
         </nb-tab>
         </nb-tabset>
-    <ngx-tableheader *ngIf="!showEmpty"></ngx-tableheader><ngx-default-content *ngIf="showEmpty" pageHeader="Create your first Cycle" pageDescription="Click on the button to create a performance cycle" buttonValue="Create Cycle" (buttonClick)="createNewClicked()">
+    <ngx-tableheader *ngIf="!showEmpty"></ngx-tableheader><ngx-default-content [loading]="loading" *ngIf="showEmpty" pageHeader="" pageDescription="You have no appraisals to review" buttonValue="" (buttonClick)="createNewClicked()">
     </ngx-default-content>
       <ngx-tablecomponent
         *ngIf="!showEmpty"
         [tableColum]="tableColumns"
-        [userData]="tableData"
+        [userData]="data"
         [loading]="loading"
         (pageChange)="loadNewPage($event)"
+        [showActions]="false"
+        (actionClick)="tableActionClick($event)"
       ></ngx-tablecomponent>
     </div>
+
+  aaa {{loading}}nnn
