--- a/src/app/modules/performance/page/performance-review/performance-review.component.html
+++ b/src/app/modules/performance/page/performance-review/performance-review.component.html
@@ -72,7 +72,7 @@
             </div>
             <div class="form-group" *ngIf="!isEmployeePage">
                 <label>Reviewer's Comment</label>
-                <input class="form-control" [disabled]="kra.isReviewerSubmitted" [(ngModel)]="kra.reviewerComment"/>
+                <input class="form-control" [disabled]="kra.isReviewerSubmitted" [(ngModel)]="kra.reviewComment"/>
             </div>
             <!-- <div class="form-group" *ngIf="kra.isEmployeeSubmitted && !kra.isReviewerSubmitted">
                 <label>Recommendations</label>
