--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -348,7 +348,7 @@ color: #4847E0 !important;
 
 button{
   text-transform: none !important;
-  min-width: 144px !important;
+  //min-width: 144px !important;
 }
 .cbadge{
   color:#4847E0;
