--- a/src/app/modules/disciplinary-management/pages/main/main.component.html
+++ b/src/app/modules/disciplinary-management/pages/main/main.component.html
@@ -1,23 +1,64 @@
 
-<ngx-componentsheader pageName="Settings"></ngx-componentsheader>
-<div class="row">
+<ngx-componentsheader pageName="Disciplinary Settings"></ngx-componentsheader>
+<ngx-default-content *ngIf="!showEmptyDisciplineType" pageHeader="Setup Your Discipline"
+pageDescription="Click on the button to start your setup" buttonValue="Continue" [loading]="loadingDisciplineType"
+(buttonClick)="showAddDisciplineTypeModal = true">
+</ngx-default-content>
+<div class="row" *ngIf="showEmptyDisciplineType">
     <div class="col-sm-3">
         <div style="margin-right: 1rem" class="card main-page-container">
             <div class="grey-2" style="font-size: 0.8rem;">DISCIPLINE</div>
-            <div class="items">
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
-                <div>Warning</div>
+            <div class="items" *ngFor="let disc of allDisciplineType; let i = index">
+                <div (click)="getTemplatesbyId(disc,disc.id)" style="cursor: pointer;">{{disc.disciplineName}}</div>
             </div>
         </div>
     </div>
     <div class="col-sm-9">
-        <ngx-discipline-edit *ngFor="let disc of [1,2,3,4,5,5,6,7]"></ngx-discipline-edit>
+      <ngx-default-content *ngIf="allDisciplineTemplate.length < 1" pageHeader="Setup Your Discipline Template"
+pageDescription="Click on the button to setup Template" buttonValue="Continue" [loading]="loadingDisciplineTemplates"
+(buttonClick)="AddNewTemplate()">
+</ngx-default-content>
+<span *ngIf="allDisciplineTemplate.length > 0" >
+  <ngx-discipline-edit *ngFor="let disc of [1,2,3,4,5,5,6,7]"></ngx-discipline-edit>
+</span>
+       
     </div>
 </div>
+
+<ngx-side-modal [(show)]='showAddDisciplineTypeModal' style="width: 500px; height: 1000px;">
+    <div modal-header>Add Discipline Type</div>
+    <div modal-body>
+      <form #disciplinetyupeForm="ngForm" name="disciplinetyupeForm" id="disciplinetyupeForm">
+          <div class="row">
+
+        <div class="col-sm-12 form-group">
+            <label for="Leave Type Name" style="font-size: small;font-weight: bold;">Name:</label>
+            <input type="text" class="form-control" placeholder="Enter Discipline Name" name="disciplineName"
+              #disciplineName="ngModel" [(ngModel)]="DisciplinePayload.disciplineName" required>
+            <div *ngIf="disciplineName.invalid && (disciplineName.dirty || disciplineName.touched)" class="error">
+              <div *ngIf="disciplineName.errors.required">Discipline name is required</div>
+            </div>
+          </div>
+          <div class="col-sm-12 form-group">
+            <label>Description:</label>
+            <textarea rows="5" [(ngModel)]="DisciplinePayload.description" #description="ngModel"  id="description" name="description"  nbInput fullWidth   placeholder="Enter Description"></textarea>
+            <div *ngIf="description.invalid && (description.dirty || description.touched)" class="error">
+              <div *ngIf="description.errors.required">Description is required</div>
+            </div>
+          </div>
+          
+        </div>
+    </form>
+    </div>
+    <div modal-actions style="margin-top: 10px; margin-bottom: 10px;display: flex;flex-direction: row;">
+        <ngx-loadable-button [loading]="loadingDisciplineType" [disabled]="disciplinetyupeForm.invalid" (click)="addDisciplineType()" >
+          Submit
+        </ngx-loadable-button>           
+        <div style="padding-left: 15px;">
+          <button  outline="true" (click)="showAddDisciplineTypeModal = false"  nbButton status="primary" class="d-flex column" > 
+            Discard
+        </button>
+       
+        </div>
+    </div>
+    </ngx-side-modal>
